make preview item video playable

--- a/fuse/src/app/main/homework/subjects/assignment/classes/class/extra-learning/templates/assigned-selection.html
+++ b/fuse/src/app/main/homework/subjects/assignment/classes/class/extra-learning/templates/assigned-selection.html
@@ -29,7 +29,7 @@
     <tr ng-repeat="item in vm.data.list" ng-show="!loading">
       <td><div><img ng-src="{{ item.thumbnail_path }}" title="{{ item.name_en }}" alt="{{ item.name_en }}"/></div></td>
       <td>
-        <div class="title">{{ item.name_en }} - {{ item.id }}</div>
+        <div class="title">{{ item.name_en }}</div>
         <div class="desc">{{ item.level_desc_en }}{{item.difficulty_en ? ' | ' + item.difficulty_en : '' }}{{vm.displayThemes(item)}}</div>
       </td>
       <td>
