--- a/fuse/src/app/main/homework/subjects/assignment/classes/class/extra-learning/templates/preview-item.html
+++ b/fuse/src/app/main/homework/subjects/assignment/classes/class/extra-learning/templates/preview-item.html
@@ -1,4 +1,4 @@
-<md-dialog class="video-dialog no-padding-margin" aria-label="New Task">
+<md-dialog id="preview-dialog" class="video-dialog no-padding-margin" aria-label="New Task">
     <form name="taskForm" class="md-inline-form" novalidate>
         <md-toolbar class="md-accent md-hue-2">
             <div class="md-toolbar-tools" layout="row" layout-align="space-between center">
