--- a/fuse/src/app/main/homework/subjects/assignment/assignment.html
+++ b/fuse/src/app/main/homework/subjects/assignment/assignment.html
@@ -4,7 +4,8 @@
   <div ncy-breadcrumb></div>
 
   <!-- HEADER -->
-  <div class="header md-accent-bg" layout="row" layout-align="start center">
+  <div class="header md-accent-bg" layout="row" layout-align="start center"
+       style="background-image: url('/assets/images/banners/{{breadcrumbs.subject.s_name_en}}.jpg')">
     <div class="white-fg" layout="row" layout-align="start center" flex>
       <div layout="row" layout-align="start center">
         <div layout="column" layout-align="start start">
