--- a/fuse/src/app/navigation/layouts/vertical-navigation/navigation.html
+++ b/fuse/src/app/navigation/layouts/vertical-navigation/navigation.html
@@ -1,10 +1,10 @@
 <md-toolbar class="navigation-header md-whiteframe-1dp" layout="row" layout-align="space-between center">
-    <div class="logo" layout="row" layout-align="start center">
-        <a ui-sref="home"><img ng-src="assets/images/logos/ehla_logo.svg" width="150" alt="EHLA logo" /></a>
-    </div>
+    <a ui-sref="app.home" class="logo" layout="row" layout-align="start center">
 
-    <!-- <md-icon class="fold-toggle s18" md-font-icon="icon-backburger" hide show-gt-sm
-             ng-click="vm.toggleMsNavigationFolded()"></md-icon> -->
+    </a>
+
+    <md-icon class="fold-toggle s18" md-font-icon="icon-backburger" hide show-gt-sm
+             ng-click="vm.toggleMsNavigationFolded()"></md-icon>
 </md-toolbar>
 
 <ms-navigation class="scrollable" folded="vm.folded" ms-scroll="vm.msScrollOptions"></ms-navigation>
