--- a/fuse/src/app/main/settings/academic-year/curriculums/curriculum/subjects/subject/level-setting/level-setting.scss
+++ b/fuse/src/app/main/settings/academic-year/curriculums/curriculum/subjects/subject/level-setting/level-setting.scss
@@ -3,6 +3,11 @@ md-dialog.video-dialog {
   max-width: 960px;
 }
 
+ul.ehla-table-list .info-section {
+  background-color: rgb(2,136,209) !important;
+  margin-top: -1px;
+}
+
 .tutor-pic {
   border-radius: 5px;
   margin: 10px;
