--- a/fuse/src/app/main/settings/levels/levels.html
+++ b/fuse/src/app/main/settings/levels/levels.html
@@ -61,7 +61,7 @@
           </div>
         </div>
         <script type="text/ng-template" id="nodes_renderer">
-          <ul class="ehla-table-list" ui-tree-handle>
+          <ul class="ehla-table-list" ui-tree-handle ng-class="[node._index_ % 2 === 0 ? 'ehla-table-list-even' : 'ehla-table-list-odd']">
             <li style="width: 30%">
               <div ng-style="{'margin-left': 20*(depth()-1) + 'px'}" style="padding: 0 5px;">
                 <md-input-container><input type="text" ng-model="node.name_en"/></md-input-container>
