--- a/fuse/src/app/main/homework/subjects/assignment/classes/class/consolidated-report/templates/topics-selection.html
+++ b/fuse/src/app/main/homework/subjects/assignment/classes/class/consolidated-report/templates/topics-selection.html
@@ -68,7 +68,7 @@
 </div>
 </div>
 <script type="text/ng-template" id="nodes_renderer">
-    <ul class="ehla-table-list" ui-tree-handle>
+    <ul class="ehla-table-list" ui-tree-handle ng-class="[node._index_ % 2 === 0 ? 'ehla-table-list-even' : 'ehla-table-list-odd']">
         <li style="width: 20%">
             <div ng-style="{'margin-left': 20*(depth()-1) + 'px'}" style="padding: 0 5px;">
                 <a class="btn btn-xs" ng-if="node.child && node.child.length > 0"
