--- a/fuse/src/app/main/homework/subjects/assignment/classes/class/extra-learning/assign-status/learning-detail/learning-setting/learning-setting.html
+++ b/fuse/src/app/main/homework/subjects/assignment/classes/class/extra-learning/assign-status/learning-detail/learning-setting/learning-setting.html
@@ -104,7 +104,7 @@
               </div>
             </div>
             <script type="text/ng-template" id="nodes_exercise">
-              <ul class="ehla-table-list" ui-tree-handle>
+              <ul class="ehla-table-list" ui-tree-handle ng-class="[node._index_ % 2 === 0 ? 'ehla-table-list-even' : 'ehla-table-list-odd']">
                 <li style="width: 40%">
                   <div ng-style="{'margin-left': 20*(depth()-1) + 'px'}" style="padding: 0 5px;">
                     <md-checkbox ng-checked="node.checkStatus==='checked'"
@@ -171,7 +171,7 @@
         </md-tab-body>
       </md-tab>
 
-      <md-tab label="Extending Learning" md-on-select="vm.switchSection('extended')">
+      <md-tab label="Extended Learning" md-on-select="vm.switchSection('extended')">
         <md-tab-body>
           <div class="exercise-detail-form-container md-background-bg md-whiteframe-1dp">
             <div>
@@ -191,7 +191,7 @@
               </ul>
             </div>
             <ul class="ehla-table-list" ng-repeat="v in vm.extendedLearning[0].detail"
-                style="border-bottom: none; padding: 0">
+                style="border-bottom: none; padding: 0" ng-class="[$index % 2 === 0 ? 'ehla-table-list-even' : 'ehla-table-list-odd']">
               <ul class="ehla-table-list" style="padding: 0">
                 <li style="width: 20%">
                   <md-checkbox ng-value="v.name_en || v.name_zh"
